# cleo

./: .gitignore  .secrets.baseline  CHANGELOG.md  CITATION.cff  CONTRACT_UNIFIED_ATLAS.md  LICENSE.md  README.md  environment.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-lock.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
cleo/: __init__.py  _arch_check.py  _turbine_validation.py  assess.py  atlas.py  bench.py  chunk.py  class_helpers.py  classes.py  clc.py  clc_codes.py  contracts.py  copdem.py  costs.py  dask_utils.py  domains.py  economics.py  errors.py  exports.py  loaders.py  net.py  results.py  site_data.py  site_process.py  spatial.py  store.py  unify.py  units.py  utils.py  validation.py  vertical.py  wind_atlas.py  wind_metrics.py
cleo/atlas_policies/: __init__.py  cleanup.py  nuts_catalog.py  region_selection.py
cleo/policies/: __init__.py  vertical_policy.py
cleo/resources/: Enercon.E101.3050.yml  Enercon.E115.3000.yml  Enercon.E138.3500.yml  Enercon.E160.5560.yml  Vestas.V100.1800.yml  Vestas.V100.2000.yml  Vestas.V162.5600.yml  Vestas.V162.7200.yml  clc_codes.yml
cleo/unification/: __init__.py  clc_io.py  fingerprint.py  gwa_io.py  manifest.py  nuts_io.py  raster_io.py  store_io.py  turbines.py  unifier.py
cleo/unification/materializers/: __init__.py  _helpers.py  _landscape_api.py  _landscape_core.py  _landscape_sources.py  _landscape_vector.py  landscape.py  region.py  shared.py  wind.py
docs/: CONTRACT_UNIFIED_ATLAS.md  index.md  start-here.md
docs/concepts/: data-model.md  documentation-strategy.md
docs/guides/: canonical-atlas-workflow.md  landscape-workflow.md  pv-domain-planned.md  wind-workflow.md
docs/reference/: atlas.md  domains.md  exports-validation.md  knobs-and-methods.md  results.md
resources/: Enercon.E126.3500.yml  Enercon.E40.500.yml  Enercon.E82.3000.yml  Vestas.V112.3075.yml  Vestas.V136.4200.yml  Vestas.V150.4200.yml  Vestas.V162.5600.yml  Vestas.V162.7200.yml  clc_codes.yml  cost_assumptions.yml
tests/: conftest.py  test_add_coord_tolerance.py  test_add_coord_tolerance_merge_is_exact.py  test_air_density_correction.py  test_air_density_correction_matches_template.py  test_air_density_crs_compare.py  test_air_density_path_str.py  test_annual_energy_8766.py  test_atlas_crs_invalid_raises_valueerror.py  test_atlas_materialize_required.py  test_atlas_smoke_no_network.py  test_bbox_returns_floats.py  test_build_netcdf_does_not_overwrite_existing_crs.py  test_capacity_factor_dimension_order.py  test_capacity_factor_requires_2points.py  test_capacity_factor_scaling.py  test_capacity_factor_shear_consistency.py  test_capacity_factor_step_curve_oracle.py  test_capacity_factor_windspeed_coord_alignment.py  test_capacity_factor_windspeed_grid_contract.py  test_capacity_factor_zero_shear.py  test_class_helpers_netcdf_io_contract.py  test_cleanup_datasets_legacy_is_oldest.py  test_clip_to_geometry_bad_path.py  test_clip_to_geometry_invalid_geom_repairs.py  test_clip_to_geometry_invalid_geom_repairs_tiny_polygon.py  test_compute_chunked_exact_grid.py  test_compute_chunked_extra_dims.py  test_compute_chunked_parallel_matches_serial.py  test_compute_chunked_preserves_dataset_vars.py  test_compute_chunked_reduction_allowed_returnss_scalar.py  test_compute_chunked_reduction_requires_xy.py  test_compute_chunked_reduction_weighted_mean.py  test_compute_chunked_supports_extra_dims.py  test_compute_mean_wind_speed_preserves_coords.py  test_convert_preserves_attrs.py  test_copdem_bbox_transform.py  test_copdem_download_cache.py  test_copdem_download_cleans_part_on_failure.py  test_copdem_download_tiles_for_bbox.py  (+61 more)
tests/assess/: test_air_density.py  test_capacity_factor.py  test_dask_behavior.py  test_energy_aggregation.py  test_semantic_cache.py  test_weibull_pdf.py  test_wind_shear.py  test_wind_speed_metrics.py
tests/chunk/: test_compute_chunked.py
tests/class_helpers/: test_logging.py  test_netcdf_io.py
tests/classes/: test_atlas_materialize.py  test_index_and_cleanup.py  test_loading_contracts.py  test_rasterize_features.py  test_save_load.py  test_turbine_append.py  test_windatlas_schema.py
tests/copdem/: test_elevation_and_mosaic.py  test_tiles_and_bbox.py
tests/helpers/: asserts.py  clc_fixtures.py  domains.py  factories.py  geo.py  mocks.py  net.py  optional.py  oracles.py  paths.py  raster.py
tests/integration/: test_api_happy_path.py  test_api_happy_path_v1.py  test_economics_integration.py  test_offline_and_no_network.py  test_region_selection.py  test_timebase_integration.py  test_unit_conversion_integration.py
tests/integration/clc/: test_clc_api.py
tests/integration/exports/: __init__.py  test_analysis_export_zarr.py
tests/integration/results/: __init__.py  test_results_api_contract.py  test_results_api_contract_v1.py  test_results_zarr_and_netcdf.py
tests/integration/unify/: __init__.py  test_landscape_add_dataarray.py  test_landscape_add_if_exists.py  test_landscape_add_incremental.py  test_landscape_distance_compute.py  test_landscape_vector_materializer.py  test_materialization_phase3_parity_baseline.py  test_materialize_landscape_copdem_path.py  test_materialize_landscape_zarr.py  test_materialize_wind_default_turbines.py  test_materialize_wind_zarr.py  test_wind_compute.py  test_wind_domain.py
tests/loaders/: test_gwa.py  test_resources_and_safe_extract.py
tests/smoke/: test_imports.py
tests/spatial/: test_clip_to_geometry.py  test_crs_and_bounds.py  test_crs_centralized.py  test_crs_no_direct_reprojection.py  test_exact_grid_setter.py  test_geotiff.py  test_guardrail_raster_assignments.py
tests/unit/assess/: test_air_density.py  test_air_density_correction.py  test_assess_unit_metadata.py  test_capacity_factor.py  test_cf_integrator_contracts.py  test_cf_metadata_provenance.py  test_dask_behavior.py  test_dask_level1.py  (+12 more)
tests/utils/: test_add_coord_tolerance.py  test_convert.py  test_downloads_and_templates.py
tools/: __init__.py  arch_check.py  check_complexity.sh  check_contract.sh  complexity_report.sh  report_strict_tail_readiness.py  secret_scan.sh
(+121 files in other folders)
