[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleo"
version = "0.0.1"
description = "Cleo supports wind resource assessment with the Global Wind Atlas"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
  {name = "Sebastian Wehrle", email = "sebastian.wehrle@boku.ac.at"},
]
urls = {Homepage = "https://github.com/sebwehrle/cleo"}

# 2B: geo deps are required (not optional).
dependencies = [
  "urllib3",
  "certifi",
  "tqdm",
  "netcdf4",
  "scipy",
  "numpy",
  "pandas",
  "openpyxl",
  "xarray",
  "pycountry",
  "pint",
  "pyyaml",
  "rasterio",
  "rioxarray",
  "xarray-spatial",
  "geopandas",
  "pyproj",
  "requests",
  "dask[array]",
  "zarr",
]

[project.optional-dependencies]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cleo*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
cleo = ["resources/*.yml"]
