[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleo"
version = "0.2.0"
description = "Cleo supports wind resource assessment with the Global Wind Atlas"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Sebastian Wehrle", email = "sebastian.wehrle@boku.ac.at"},
]
urls = {Homepage = "https://github.com/sebwehrle/cleo"}

# Dependency version policy (see docs/CONTRACT_UNIFIED_ATLAS.md Section C3):
# - Lower bounds: minimum versions known to work based on CI/testing
# - Upper bounds: protective caps for ecosystem components with known breaking changes
dependencies = [
  # Core scientific stack
  "numpy>=1.24,<3",        # 1.24 for numpy.typing; <3 for future major protection
  "scipy>=1.10",           # 1.10 for consistent interpolation APIs
  "pandas>=2.0",           # 2.0 for pyarrow-backed strings, CoW semantics

  # xarray ecosystem (fragile - version sensitive)
  "xarray>=2023.1",        # 2023.1 for attrs/keep_attrs semantics used in compute
  "dask[array]>=2023.1",   # 2023.1 for consistent array protocol
  "zarr>=3.0,<4",          # v3 required per CONTRACT B3; cap at v4 for dtype stability

  # Geospatial stack
  "rasterio>=1.3",         # 1.3 for CRS/transform stability
  "rioxarray>=0.14",       # 0.14 for clip/reproject reliability
  "geopandas>=0.14",       # 0.14 for shapely 2.0 integration
  "pyproj>=3.4",           # 3.4 for PROJ 9.x compatibility
  "shapely>=2.0",          # 2.0 for vectorized operations (geopandas dep)
  "xarray-spatial>=0.3",   # 0.3 for focal operations

  # I/O and serialization
  "netcdf4>=1.6",          # 1.6 for HDF5 1.12+ compatibility
  "pyyaml>=6.0",           # 6.0 for safe_load defaults
  "openpyxl>=3.1",         # 3.1 for xlsx read/write

  # Network and utilities
  "requests>=2.28",        # 2.28 for urllib3 2.x compatibility
  "urllib3>=2.0",          # 2.0 for modern TLS defaults
  "certifi>=2023.1",       # 2023.1 for current CA bundle
  "tqdm>=4.64",            # 4.64 for notebook/console detection

  # Domain-specific
  "pycountry>=22.1",       # 22.1 for ISO-3166 updates
  "pint>=0.20",            # 0.20 for unit registry stability
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocstrings[python]>=0.26",
]
dev = [
  "pytest>=7.0",           # 7.0 for pythonpath config support
  "pytest-cov>=4.0",       # 4.0 for coverage 7.x compatibility
  "pytest-xdist>=3.0",     # 3.0 for parallel test execution
  "ruff==0.15.5",          # pin formatter/linter version to match CI and local pre-commit
  "detect-secrets==1.5.0", # pin secret scanner version to match CI and local maintainer checks
  "build>=1.0",            # 1.0 for PEP 517 build
  "psutil>=5.9",           # benchmark helper memory metrics
]

[tool.pytest.ini_options]
markers = [
  "slow: slower integration tests",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cleo*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
cleo = ["resources/*.yml"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
]
ignore = [
    "E402",  # module-import-not-at-top-of-file (common for conditional imports and import guards)
    "E501",  # line-too-long (handled by formatter)
    "E731",  # do not assign a lambda expression
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F841",  # unused-variable (common in tests for side-effect imports like pytest.importorskip)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
disable_error_code = [
    "attr-defined",
    "arg-type",
    "assignment",
    "call-overload",
    "index",
    "operator",
    "return-value",
    "type-var",
    "union-attr",
]
# Exclude tests and generated files
exclude = [
    "tests/",
    "build/",
    "dist/",
]
